# dogsvscats

./: Dockerfile  Makefile  main.py  pyproject.toml  requirements.txt  util.py
static/: app.js  styles.css
templates/: index.html
